--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "tijmen-wierenga/cerberus",
     "description": "Full authentication and authorization with OAuth2",
     "require-dev": {
-        "phpunit/phpunit": "^6.5",
+        "phpunit/phpunit": "6.3.*",
         "symfony/var-dumper": "^4.0",
         "phpstan/phpstan": "^0.9.1"
     },
