--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,18 @@
         }
     ],
     "require": {
-        "league/oauth2-server": "^6.1"
+        "league/oauth2-server": "^6.1",
+        "doctrine/collections": "^1.5",
+        "ramsey/uuid": "^3.7"
+    },
+    "autoload": {
+        "psr-4": {
+            "TijmenWierenga\\Cerberus\\": "src/Cerberus/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "TijmenWierenga\\Tests\\": "tests/"
+        }
     }
 }
