--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "require-dev": {
         "phpunit/phpunit": "6.3.*",
         "symfony/var-dumper": "^4.0",
-        "phpstan/phpstan": "^0.9.1"
+        "phpstan/phpstan": "^0.9.1",
+        "squizlabs/php_codesniffer": "^3.2"
     },
     "license": "MIT",
     "authors": [
