--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "phpunit/phpunit": "6.3.*",
         "symfony/var-dumper": "^4.0",
         "phpstan/phpstan": "^0.9.1",
-        "squizlabs/php_codesniffer": "^3.2"
+        "squizlabs/php_codesniffer": "^3.2",
+        "zendframework/zend-diactoros": "^1.7"
     },
     "license": "MIT",
     "authors": [
