--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "require": {
         "league/oauth2-server": "^6.1",
         "doctrine/collections": "^1.5",
-        "ramsey/uuid": "^3.7"
+        "ramsey/uuid": "^3.7",
+        "slim/slim": "^3.9"
     },
     "autoload": {
         "psr-4": {
