--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         }
     ],
     "require": {
+        "php": ">=7.1",
         "league/oauth2-server": "^6.1",
         "doctrine/collections": "^1.5",
         "ramsey/uuid": "^3.7",
