--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,3 @@
 index:
-    path: /
-    controller: Cerberus\Controller\OauthController::index
+    path: /access-token
+    controller: Cerberus\Controller\OAuthController::accessTokenRequest
