--- a/config/services.yaml
+++ b/config/services.yaml
@@ -16,7 +16,10 @@ services:
     # this creates a service per class whose id is the fully-qualified class name
     Cerberus\:
         resource: '../src/*'
-        exclude: '../src/{OAuth,Entity,Migrations,Tests,Kernel.php}'
+        exclude: '../src/{Entity,Migrations,Tests,Kernel.php,OAuth}'
+
+    Cerberus\OAuth\Repository\:
+        resource: '../src/OAuth/Repository/*'
 
     # controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
