--- a/config/services.yaml
+++ b/config/services.yaml
@@ -29,3 +29,27 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    League\OAuth2\Server\Repositories\ClientRepositoryInterface: '@Cerberus\OAuth\Repository\Client\InMemoryClientRepository'
+    League\OAuth2\Server\Repositories\AccessTokenRepositoryInterface: '@Cerberus\OAuth\Repository\AccessToken\InMemoryAccessTokenRepository'
+    League\OAuth2\Server\Repositories\ScopeRepositoryInterface: '@Cerberus\OAuth\Repository\Scope\InMemoryScopeRepository'
+    League\OAuth2\Server\Repositories\UserRepositoryInterface: '@Cerberus\OAuth\Repository\User\InMemoryUserRepository'
+    League\OAuth2\Server\Repositories\RefreshTokenRepositoryInterface: '@Cerberus\OAuth\Repository\RefreshToken\InMemoryRefreshTokenRepository'
+
+    League\OAuth2\Server\Grant\ClientCredentialsGrant: ~
+    League\OAuth2\Server\Grant\PasswordGrant: ~
+
+    League\OAuth2\Server\AuthorizationServer:
+        arguments:
+            - '@League\OAuth2\Server\Repositories\ClientRepositoryInterface'
+            - '@League\OAuth2\Server\Repositories\AccessTokenRepositoryInterface'
+            - '@League\OAuth2\Server\Repositories\ScopeRepositoryInterface'
+            - '%privateKey%'
+            - '%env(APP_SECRET)%'
+        calls:
+            - method: enableGrantType
+              arguments:
+                - '@League\OAuth2\Server\Grant\ClientCredentialsGrant'
+            - method: enableGrantType
+              arguments:
+                - '@League\OAuth2\Server\Grant\PasswordGrant'
