Added MongoDB and Doctrine ODM

--- a/.env.dist
+++ b/.env.dist
@@ -8,3 +8,8 @@ APP_SECRET=6e31035c5054fb1c253567b2e6bb467b
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS=localhost,example.com
 ###< symfony/framework-bundle ###
+
+###> doctrine/mongodb-odm-bundle ###
+MONGODB_URL=mongodb://mongo:27017
+MONGODB_DB=oauth
+###< doctrine/mongodb-odm-bundle ###
