--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": "^7.1.3",
         "ext-iconv": "*",
         "doctrine/collections": "^1.5",
+        "doctrine/mongodb-odm-bundle": "^3.4",
         "league/oauth2-server": "^6.1",
         "ramsey/uuid": "^3.7",
         "sensio/framework-extra-bundle": "^5.1",
