Added bootstrap commands with updated Makefile and docker-compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,14 @@ services:
     volumes:
       - .:/app
     command: ["php", "-S", "0.0.0.0:8080", "-t", "/app/public"]
+
+  mongo:
+    image: mongo:3
+    ports:
+      - 27017:27017
+    volumes:
+      - mongo-data:/data/db
+
+volumes:
+  mongo-data:
+    external: true
