--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,13 @@ services:
     image: cerberus/php:7.2
     build:
       context: ./docker/php
+      args:
+        - USER_ID=${UID}
     ports:
       - 8080:8080
     volumes:
-      - .:/app
-    command: ["php", "-S", "0.0.0.0:8080", "-t", "/app/public"]
+      - .:/var/www/html
+    command: ["php", "-S", "0.0.0.0:8080", "-t", "/var/www/html/public"]
 
   mongo:
     image: mongo:3
