--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "require": {
         "php": "^7.1.3",
         "ext-iconv": "*",
+        "alcaeus/mongo-php-adapter": "^1.1",
         "doctrine/collections": "^1.5",
         "doctrine/mongodb-odm-bundle": "^3.4",
         "league/oauth2-server": "^6.1",
@@ -30,7 +31,10 @@
         "preferred-install": {
             "*": "dist"
         },
-        "sort-packages": true
+        "sort-packages": true,
+        "platform": {
+            "ext-mongo": "1.6.16"
+        }
     },
     "autoload": {
         "psr-4": {
