Registered UUID type as custom type for Doctrine

--- a/config/doctrine/metadata/mongodb/Client.mongodb.yml
+++ b/config/doctrine/metadata/mongodb/Client.mongodb.yml
@@ -3,6 +3,7 @@ Cerberus\OAuth\Client:
     id:
       id: true
       strategy: none
+      type: uuid
     name:
       type: string
     clientSecret:
