Registered hashing services in service container

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -27,6 +27,8 @@ services:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
 
+    Cerberus\Hasher\HasherInterface: '@Cerberus\Hasher\ArgonPasswordHasher'
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
 
