--- a/config/services_test.yaml
+++ b/config/services_test.yaml
@@ -2,6 +2,8 @@ services:
     _defaults:
         public: true
 
+    Cerberus\Hasher\HasherInterface: '@Cerberus\Hasher\PlainTextHasher'
+
     # If you need to access services in a test, create an alias
     # and then fetch that alias from the container. As a convention,
     # aliases are prefixed with test. For example:
