Registered new security provider

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -6,8 +6,11 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-        main:
-            anonymous: true
+        api:
+            oauth: true
+            access_denied_handler: Cerberus\Security\Handler\AccessDeniedHandler
+            pattern: ^/api/
+            stateless: true
 
             # activate different ways to authenticate
 
@@ -20,5 +23,4 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+         - { path: ^/api/, roles: IS_AUTHENTICATED_FULLY }
