Added mapping for allowed grant types in mongo for Client

--- a/config/doctrine/metadata/mongodb/Client.mongodb.yml
+++ b/config/doctrine/metadata/mongodb/Client.mongodb.yml
@@ -10,3 +10,5 @@ Cerberus\OAuth\Client:
       type: string
     redirectUri:
       type: collection
+    allowedGrantTypes:
+      type: collection
