--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "alcaeus/mongo-php-adapter": "^1.1",
         "doctrine/collections": "^1.5",
         "doctrine/mongodb-odm-bundle": "^3.4",
+        "league/fractal": "^0.17.0",
         "league/oauth2-server": "^6.1",
         "ramsey/uuid": "^3.7",
         "sensio/framework-extra-bundle": "^5.1",
