--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -32,6 +32,9 @@
         <testsuite name="functional">
             <directory>tests/Functional/</directory>
         </testsuite>
+        <testsuite name="integration">
+            <directory>tests/Integration/</directory>
+        </testsuite>
     </testsuites>
 
     <filter>
