--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "doctrine/mongodb-odm-bundle": "^3.4",
         "league/fractal": "^0.17.0",
         "league/oauth2-server": "^6.1",
+        "pagerfanta/pagerfanta": "^2.0",
         "ramsey/uuid": "^3.7",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/console": "^4.0",
