Changing volume name for testing to avoid conflict with development volume

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -18,8 +18,8 @@ services:
   mongo:
     image: mongo:3
     volumes:
-      - mongo-data:/data/db
+      - mongo-test-data:/data/db
 
 volumes:
-  mongo-data:
+  mongo-test-data:
     driver: local
