Created better setter method for adding a redirect uri

--- a/config/doctrine/metadata/mongodb/Client.mongodb.yml
+++ b/config/doctrine/metadata/mongodb/Client.mongodb.yml
@@ -8,7 +8,7 @@ Cerberus\OAuth\Client:
       type: string
     clientSecret:
       type: string
-    redirectUri:
+    redirectUris:
       type: collection
     allowedGrantTypes:
       type: collection
