Use flex to install CORS package

--- a/.env.dist
+++ b/.env.dist
@@ -13,3 +13,7 @@ APP_SECRET=6e31035c5054fb1c253567b2e6bb467b
 MONGODB_URL=mongodb://mongo:27017
 MONGODB_DB=oauth
 ###< doctrine/mongodb-odm-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN=^https?://localhost:?[0-9]*$
+###< nelmio/cors-bundle ###
