--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ language: php
 services:
   - docker
 
+env:
+  DOCKER_COMPOSE_VERSION: 1.16.1
+
 before_install:
   - docker-compose build server
   - docker-compose -f docker-compose.test.yml up -d mongo
