--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ env:
   DOCKER_COMPOSE_VERSION: 1.16.1
 
 before_install:
-  - docker-compose build server
+  - docker-compose -f docker-compose.test.yml build
   - docker-compose -f docker-compose.test.yml up -d mongo
 
 script:
