--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
   - mkdir keys
   - docker run -it --rm -v $(pwd)/keys:/export frapsoft/openssl:latest genrsa -out /export/private.key 2048
   - docker run -it --rm -v $(pwd)/keys:/export frapsoft/openssl:latest rsa -in /export/private.key -pubout -out /export/public.key
-  - chmod 660 keys/private.key keys/public.key
+  - /usr/bin/env sh chmod 660 keys/private.key keys/public.key
   - docker-compose -f docker-compose.test.yml build
   - docker-compose -f docker-compose.test.yml up -d mongo
 
@@ -22,4 +22,3 @@ script:
   - docker run -it --rm cerberus/php:7.2 bin/phpunit --testsuite unit
   - docker run -it --rm cerberus/php:7.2 vendor/bin/phpstan analyze src --level 7
   - docker run -it --rm cerberus/php:7.2 vendor/bin/phpcs src --standard=PSR2
-  
