Registered new repositories as a service implementation

--- a/config/services_test.yaml
+++ b/config/services_test.yaml
@@ -10,3 +10,4 @@ services:
     #
     # test.App\Service\MyService: '@App\Service\MyService'
     test.Cerberus\OAuth\Repository\Client\MongoClientRepository: '@Cerberus\OAuth\Repository\Client\MongoClientRepository'
+    test.Cerberus\OAuth\Repository\User\MongoUserRepository: '@Cerberus\OAuth\Repository\User\MongoUserRepository'
