--- a/config/services.yaml
+++ b/config/services.yaml
@@ -34,6 +34,7 @@ services:
 
     Cerberus\Hasher\HasherInterface: '@Cerberus\Hasher\ArgonPasswordHasher'
     Cerberus\OAuth\Repository\Client\ClientRepositoryInterface: '@Cerberus\OAuth\Repository\Client\MongoClientRepository'
+    Cerberus\OAuth\Repository\User\UserRepositoryInterface: '@Cerberus\OAuth\Repository\User\MongoUserRepository'
     Cerberus\PropertyAccess\ObjectUpdaterInterface: '@Cerberus\PropertyAccess\ObjectUpdater'
 
     Cerberus\Security\Listener\OAuthListener:
@@ -50,7 +51,7 @@ services:
     League\OAuth2\Server\Repositories\ClientRepositoryInterface: '@Cerberus\OAuth\Repository\Client\ClientRepositoryInterface'
     League\OAuth2\Server\Repositories\AccessTokenRepositoryInterface: '@Cerberus\OAuth\Repository\AccessToken\InMemoryAccessTokenRepository'
     League\OAuth2\Server\Repositories\ScopeRepositoryInterface: '@Cerberus\OAuth\Repository\Scope\InMemoryScopeRepository'
-    League\OAuth2\Server\Repositories\UserRepositoryInterface: '@Cerberus\OAuth\Repository\User\InMemoryUserRepository'
+    League\OAuth2\Server\Repositories\UserRepositoryInterface: '@Cerberus\OAuth\Repository\User\UserRepositoryInterface'
     League\OAuth2\Server\Repositories\RefreshTokenRepositoryInterface: '@Cerberus\OAuth\Repository\RefreshToken\InMemoryRefreshTokenRepository'
 
     League\OAuth2\Server\Grant\ClientCredentialsGrant: ~
