Added unique constraints on mongo config for User entity

--- a/config/doctrine/metadata/mongodb/User.mongodb.yml
+++ b/config/doctrine/metadata/mongodb/User.mongodb.yml
@@ -6,6 +6,8 @@ Cerberus\OAuth\User:
       type: uuid
     username:
       type: string
+      index: true
+      unique: true
     password:
       type: string
     scopes:
