Added relationship mapping between Client and Scopes

--- a/config/doctrine/metadata/mongodb/Client.mongodb.yml
+++ b/config/doctrine/metadata/mongodb/Client.mongodb.yml
@@ -12,3 +12,6 @@ Cerberus\OAuth\Client:
       type: collection
     allowedGrantTypes:
       type: collection
+  referenceMany:
+    scopes:
+      targetDocument: Cerberus\OAuth\Scope
