--- a/config/services_test.yaml
+++ b/config/services_test.yaml
@@ -12,3 +12,4 @@ services:
     test.Cerberus\OAuth\Repository\Client\MongoClientRepository: '@Cerberus\OAuth\Repository\Client\MongoClientRepository'
     test.Cerberus\OAuth\Repository\User\MongoUserRepository: '@Cerberus\OAuth\Repository\User\MongoUserRepository'
     test.Cerberus\OAuth\Repository\Scope\MongoScopeRepository: '@Cerberus\OAuth\Repository\Scope\MongoScopeRepository'
+    test.Cerberus\OAuth\Repository\Scope\ScopeRepositoryInterface: '@Cerberus\OAuth\Repository\Scope\ScopeRepositoryInterface'
