Updated Doctrine mapping for User to handle scopes as a relation

--- a/config/doctrine/metadata/mongodb/User.mongodb.yml
+++ b/config/doctrine/metadata/mongodb/User.mongodb.yml
@@ -10,5 +10,6 @@ Cerberus\OAuth\User:
       unique: true
     password:
       type: string
+  referenceMany:
     scopes:
-      type: collection
+      targetDocument: Cerberus\OAuth\Scope
