--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,5 +1,5 @@
 framework:
-    secret: '%env(APP_SECRET)%'
+    secret: '%app_secret%'
     #default_locale: en
     #csrf_protection: true
     #http_method_override: true
